css/styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

body {
  color: antiquewhite;
  background-image: url(../images/mörk.jpg);
  background-color: #000000;
  background-position: center center;
  background-size: cover;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
  

}
.bild {
  display: flex;
  justify-content: center;
}
.navbar {
  background-color: rgb(0, 0, 0);
}
.dropdown-menu {
  background-color: rgb(0, 0, 0);
}
.dropdown-item {
  color: white;
}
.dropdown-menu :hover {
  background-color: rgb(54, 54, 54);
}
.lead {
  display: flex;
  justify-content: center;
}
.mainFooter {
  display: flex;
  justify-content: center;
  text-align: center;
  color: rgb(151, 151, 151);
  padding: 10px;
  margin-top: 30px;
}

#kontakt {
  color: rgb(53, 181, 255);
  text-decoration: none;
}

#contactForm {
  display: flex;
  justify-content: center;
}
.VBIinnehåll {
  margin-top: 70px;
}

.box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* flex-wrap: nowrap; */
  padding: 20px;
  background: #060629de;
  width: fit-content;
  margin: 10px;
}
.box img {
  padding-bottom: 10px;
  width: 250px;
}
.box p {
  padding: 0;
  margin: 0;
}
.flex-container {
  display: flex;
  justify-content: center space-between;
  flex-direction: column;
}

h2 {
  text-align: center;
  font-size: 2em;
}

/* test animation */

.wrapper {
  width: 250px;
  margin: 20px auto;
  padding: 0.5em;
}

.wrapper h2 {
  text-align: left;
  font-size: 1.3em;
}
.line {
  height: 25px;
  min-width: 250px;
  margin: 0 auto 10px;
  line-height: 25px;
  font-size: 14px;
  color: #fff;
  padding: 0 0 0 10px;
  position: relative;
}
.line::before {
  content: "";
  width: 100%;
  position: absolute;
  left: 0;
  height: 25px;
  top: 0;
  z-index: -2;
  background: #d2d6d7;
  border-radius: 15px;
}

.line::after {
  content: "";
  background: #333;
  height: 25px;
  transition: 0.8s;
  display: block;
  width: 100%;
  animation: animate 1 4s;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  border-radius: 15px;
}
.nicoleLine1::after {
  max-width: 90%;
  background: rgb(196, 47, 66);
}
.nicoleLine2::after {
  max-width: 80%;
  background: rgb(227, 89, 31);
}
.nicoleLine3::after {
  max-width: 70%;
  background: rgb(2, 35, 89);
}
.nicoleLine4::after {
  max-width: 75%;
  background: rgb(221, 191, 23);
}

.sofiaLine1::after {
  max-width: 90%;
  background: rgb(196, 47, 66);
}
.sofiaLine2::after {
  max-width: 80%;
  background: rgb(227, 89, 31);
}
.sofiaLine3::after {
  max-width: 70%;
  background: rgb(2, 35, 89);
}
.sofiaLine4::after {
  max-width: 75%;
  background: rgb(8, 142, 151);
}

.kalleLine1::after {
  max-width: 90%;
  background: rgb(196, 47, 66);
}
.kalleLine2::after {
  max-width: 80%;
  background: rgb(227, 89, 31);
}
.kalleLine3::after {
  max-width: 70%;
  background: rgb(2, 35, 89);
}
.kalleLine4::after {
  max-width: 75%;
  background: rgb(221, 191, 23);
}

@keyframes animate {
  0% {
    width: 0;
  }
  100% {
    width: 100%;
  }
}

